<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray300" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_30"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray300" />

        <RelativeLayout
            android:background="@color/white_bg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_15">

            <ImageView
                android:id="@id/iv_AccountImage"
                android:layout_width="50.0dip"
                android:layout_height="50.0dip"
                android:layout_centerVertical="true"
                android:layout_marginTop="20.0dip"
                android:src="@drawable/icon_me" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/margin_top_30"
                android:layout_toRightOf="@id/iv_AccountImage"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="您好：app测试"
                    android:textColor="@color/blueGray600"
                    android:textSize="@dimen/text_mainlittle_size" />

                <TextView
                    android:id="@+id/tv_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_15"
                    android:text="账号：admin"
                    android:textColor="@color/blueGray600"
                    android:textSize="@dimen/text_mainlittle_size" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray300" />

        <RelativeLayout
            android:background="@color/white_bg"
            android:id="@+id/rl_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/icon_change_password"
                android:drawablePadding="@dimen/padding_5"
                android:text="@string/change_password"
                android:textColor="@color/gray500"
                android:textSize="@dimen/text_mainlittle_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_navigate_next_grey_800_24dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray300" />

        <RelativeLayout
            android:background="@color/white_bg"
            android:id="@+id/rl_storehorse_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/icon_storehorse_update"
                android:drawablePadding="@dimen/padding_5"
                android:text="@string/storehouse_update"
                android:textColor="@color/gray500"
                android:textSize="@dimen/text_mainlittle_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_navigate_next_grey_800_24dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray300" />

        <RelativeLayout
            android:background="@color/white_bg"
            android:id="@+id/rl_apk_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/icon_apk_update"
                android:drawablePadding="@dimen/padding_5"
                android:text="@string/apk_update"
                android:textColor="@color/gray500"
                android:textSize="@dimen/text_mainlittle_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_navigate_next_grey_800_24dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray300" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/rl_quite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/padding_15"
            android:background="@drawable/shape_button"
            android:padding="@dimen/padding_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/quite"
                android:textColor="@color/white_bg"
                android:textSize="@dimen/text_mainlittle_size" />

        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>